# simaster_tools

./: README.md
.github/workflows/: main.yml
App/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
App/public/: dumpDataMK.js
App/src/: main.tsx
App/src-tauri/: Cargo.toml  tauri.conf.json
App/src-tauri/capabilities/: main.json  migrated.json
App/src-tauri/migrations/: data_mk.sql
App/src-tauri/src/: main.rs
App/src/components/MoLogo/: MoLogo.module.css  MoLogo.tsx  MoLogoFull.tsx  MoLogoInfoLomba.tsx  MoLogoMini.tsx  use-mo-logo-colors.ts
App/src/components/NavbarStuff/: NavbarFoot.tsx  NavbarLink.tsx
App/src/components/ToggleColor/: Index.tsx
App/src/routers/: _index.tsx
App/src/routers/Extension/: _index.tsx  _router.tsx
App/src/routers/Planner/: _router.tsx
App/src/routers/Planner/Index/: _index.tsx  _loader.tsx  dataView.tsx  provider.tsx
App/src/routers/Planner/Index/components/: Filter.tsx  Reset.tsx  TableKRS.tsx  TableMk.tsx
App/src/routers/Planner/New/: _index.tsx  _loader.tsx  handleImport.tsx
App/src/routers/Planner/New/components/: Tutorial.tsx
App/src/routers/Welcome/: _index.tsx  _router.tsx
App/src/services/: data_MK.tsx  selected_MK.tsx
App/src/types/: context.d.ts  krs.d.ts  storage.d.ts
App/src/utils/: disableMenu.tsx
Extensions/: README.md
Extensions/auto edom/: TUTORIAL.md  background.js  manifest.json  popup.html  popup.js
